# Compile-time-Dependency-Injection

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bootstrap.cpp  bootstrap.h  descriptors.h  main.cpp
examples/: bootstrap.h  exposure.h  service.h
examples/dao/: CMakeLists.txt  bootstrap.h  dependency_exposure.h  exposure.h  repository.h  unit_of_work.cpp  unit_of_work.h
examples/dao/abstract/: repository_descriptor.h  unit_of_work_descriptor.h
examples/domain/: company.cpp  company.h  department.cpp  department.h  employee.h
examples/infra/: logger.cpp  logger.h  printer.h
examples/infra/abstract/: logger_descriptor.h  printer_descriptor.h
examples/services/: CMakeLists.txt  department_management.cpp  department_management.h  dependency_exposure.h  employee_management.cpp  employee_management.h  exposure.h  report_management.cpp  report_management.h  service.cpp  service.h
examples/services/abstract/: department_management_descriptor.h  employee_management_descriptor.h  report_management_descriptor.h
examples/utils/: enumerable.cpp  enumerable.h  input_range.cpp  input_range.h
lib/: CMakeLists.txt  binding.cpp  binding.h  ioc.cpp  ioc.h  ioc_2.cpp  ioc_2.h  lifetime.cpp  lifetime.h  lifetime_manager.cpp  lifetime_manager.h  service_collection.cpp  service_collection.h  service_factory.cpp  service_factory.h  util.h
lib/util/: evaluate_type.cpp  evaluate_type.h
src/: CMakeLists.txt  booststrap.h  service.h
